<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="5dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_packFileHint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pack_file_hint"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:layout_marginTop="5dip"
        />

    <Button
        android:id="@+id/btn_packFile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pack_file"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >
        <TextView
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_hint"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_progressHint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_default"
        android:layout_marginTop="10dip"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

    <ProgressBar
        android:id="@+id/processBar"
        android:progress="0"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        />


    <TextView
        android:id="@+id/txt_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_used_duration"
        android:layout_marginTop="10dip"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />

</LinearLayout>
